# FFmpegDemo

./: .gitignore  CMD_FFMPEG.c  CMakeLists.txt  README.md  main.cpp
ffmpeg/include/libavcodec/: avcodec.h
ffmpeg/include/libavformat/: avformat.h  avio.h
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
include/: decode_video.h  decode_video2.h  demuxer.h  demuxer_test.h  encode_audio_pcm_aac.h  encode_audio_pcm_aac_lxy.h  encode_test.h  encode_video.h  encode_video_yuv_h264.h  encode_video_yuv_h264_lxy.h  remuxer.h  test.h  transcode_video.h  utils.h
